crates/swc_ecma_parser/tests/typescript-errors/class/override-with-readonly/input.ts
class C {
  readonly override size = 5
}
